overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
   display: grid;
   grid-template-columns: auto auto 1fr;
   text-align: center;
-  overflow: hidden;
 }
 
 .facet-config {
@@ -18,13 +17,21 @@
   grid-template-columns: auto auto;
 }
 
+/* overflow still buggy when content outside of screen */
+.facet-outer {
+  display: grid;
+  grid-template-columns: auto;
+  overflow: hidden;
+}
+
+
 .facet-content {
   display: grid;
   grid-gap: 2px;
   grid-template-columns: repeat(var(--colNum), auto);
   grid-auto-flow: row dense;
   grid-auto-columns: min-content;
-  margin-top: 150px;
+  margin-top: 200px;
 }
 
 .facet-content  > div {
@@ -48,7 +55,8 @@
 }
 /* https://stackoverflow.com/questions/16301625/rotated-elements-in-css-that-affect-their-parents-height-correctly */
 .facet-column-header {
-  transform: rotate(-60deg) translateY(65%);
+  /* transform: rotate(-60deg) translateY(65%); */
+  transform: rotate(-90deg) translateY(90%);
   transform-origin: left bottom 0;
   display: inline-block;
   width: 1rem;
